Issue #2282969: Added help text on Workflows page, to tell user how to use Workflow Field.
Issue #2285327: Fixed wrong function call in VBO action 'Set to next state'.
Issue #2277751 by barami: Added $property['options list'] to Workflow Field.
Issue #1511694 by joel_osc: Added integration of WorkflowNode with Panels.
Issue #2187731 by boris sondagh: Added Panels access/selection rules based on workflow.
Issue #2152435: Prepared WorkflowField Features export for better import when wid changed in target system.
Issue #2287057: Fixed usage of actual $user instead of global $user for Transition.
Issue #2287057: Fixed undefined variable $workflow_id in workflow.module.
Issue #2283821: Fixed error in hook_update_7007() due to schema changes, when Upgrading from old D6/D7-version to 7.x-2.x.
Issue #2283821: Fixed error in workflow_node, when Upgrading from old D6/D7-version to 7.x-2.x.
Issue #2291411: Fixed broken link on Admin UI.
Issue #2217855: Fixed fatal error in workflow_actions when ConfigTransition has invalid target_state.
Issue #2187321: Fixed message when importing workflow.
Issue #2296843: Added more properties and functions to entities.
Issue #2296843: Added more properties and functions to entities - remove typo.
Issue #2205707: Added permission for workflow_comment_edit_link field handler from workflow_extensions.
Issue #2211145: Grouped workflow action buttons together with Drupal buttons ([Save], [Preview]).
Issue #2283821: Fixed error in hook_update_7007() due to schema changes, when Upgrading from old D6/D7-version to 7.x-2.x.
Fixed code style errors, as reported by pareview.sh and coder module.
Issue #2299883: Fixed invalid WorkflowConfigTransitions created when cloning a Workflow.
Issue #2299909: Removed -delete- link on Admin UI if Workflow is not deletable.
Issue #2211145: Fixed messsage when only 1 Workflow Action Button avilable on form.
Issue #2300497: Allow non-allowed transitions when $force is set.