@@ -242,8 +242,7 @@ class WorkflowTransition extends Entity {
       '%new' => $new_sid,
     );
 
-    $old_state = workflow_state_load_single($old_sid);
-    if (!$old_state) {
+    if (!$this->getOldState()) {
       drupal_set_message($message = t('You tried to set a Workflow State, but
         the entity is not relevant. Please contact your system administrator.'),
         'error');
@@ -342,19 +341,19 @@ class WorkflowTransition extends Entity {
 
       // Register state change with watchdog.
       if ($state_changed) {
-        $workflow = $old_state->getWorkflow();
+        $workflow = $this->getWorkflow();
         // Get the workflow_settings, unified for workflow_node and workflow_field.
         // @todo D8: move settings back to Workflow (like workflownode currently is).
         // @todo D8: to move settings back, grep for "workflow->options" and "field['settings']".
         $field = _workflow_info_field($field_name, $workflow);
 
-        if (($state = workflow_state_load_single($new_sid)) && !empty($field['settings']['watchdog_log'])) {
+        if (($new_state = $this->getNewState()) && !empty($field['settings']['watchdog_log'])) {
           $entity_type_info = entity_get_info($entity_type);
           $message = ($this->isScheduled()) ? 'Scheduled state change of @type %label to %state_name executed' : 'State of @type %label set to %state_name';
           $args = array(
             '@type' => $entity_type_info['label'],
             '%label' => entity_label($entity_type, $entity),
-            '%state_name' => check_plain(t($state->label())),
+            '%state_name' => check_plain(t($new_state->label())),
           );
           $uri = entity_uri($entity_type, $entity);
           watchdog('workflow', $message, $args, WATCHDOG_NOTICE, l('view', $uri['path']));
@@ -420,7 +419,7 @@ class WorkflowTransition extends Entity {
    *   The workflow for this Transition.
    */
   public function getWorkflow() {
-    $state = workflow_state_load($this->new_sid);
+    $state = workflow_state_load_single($this->new_sid);
     $workflow = workflow_load($state->wid);
     return $workflow;
   }
