@@ -79,14 +79,10 @@ function workflow_revert_workflow_history_alter(array &$variables) {
   if ($first) {
     $old_sid = $transition->old_sid;
     $new_sid = $transition->new_sid;
-    $entity_type = $transition->entity_type;
-    $entity = $transition->getEntity();
-    $id = $transition->entity_id;
-    $field_name = $transition->field_name;
 
-    $old_state = workflow_state_load_single($old_sid);
-    // Some state are not fit to revert to. In each of these cases, prohibit
+    // Some states are not fit to revert to. In each of these cases, prohibit
     // to revert to an even older state.
+    $old_state = $transition->getOldState();
     if (!$old_state || !$old_state->isActive() || $old_state->isCreationState()) {
       $first = FALSE;
     }
@@ -96,7 +92,11 @@ function workflow_revert_workflow_history_alter(array &$variables) {
     else {
       // Let's ask other modules if the reversion is allowed. Reversing old and new sid!
       // @todo D8: remove, or replace by 'transition pre'. See WorkflowState::getOptions().
-      $permitted = module_invoke_all('workflow', 'transition permitted', $transition->new_sid, $old_sid, $entity, $force = FALSE, $entity_type, $field_name, $transition, $user);
+      $entity_type = $transition->entity_type;
+      $entity = $transition->getEntity();
+      $id = $transition->entity_id;
+      $field_name = $transition->field_name;
+      $permitted = module_invoke_all('workflow', 'transition permitted', $new_sid, $old_sid, $entity, $force = FALSE, $entity_type, $field_name, $transition, $user);
       // Stop if a module says so.
       if (!in_array(FALSE, $permitted, TRUE)) {
         // If not vetoed, mark it.
